QS-1359: Improve home page

--- a/src/scss/_partials/_panel.scss
+++ b/src/scss/_partials/_panel.scss
@@ -35,7 +35,7 @@ body.panels-3d.with-panel-left-reveal .views {
 		width: 100px;
 	}
 	.menu {
-		padding: 30px 30px 0 30px;
+		padding: 0 30px 0 30px;
 
 		a {
 			display: block;
