--- a/src/scss/pages/other-interests.scss
+++ b/src/scss/pages/other-interests.scss
@@ -1,42 +1,49 @@
-body #root .App .views .view .page.other-interests-page  {
-  #page-content {
-    margin: 60px auto 0 auto;
-    width: 100%;
+body #root .App .views {
 
-    .profile-avatars-connection {
-      margin: 50px auto 10px auto;
-      text-align: center;
-    }
+  #other-interests-view-main {
+    overflow-y: hidden;
+  }
 
-    .title {
-      margin-bottom: 10px;
-    }
+  .view .page.other-interests-page {
+    #page-content {
+      margin: 60px auto 0 auto;
+      width: 100%;
 
-    .common-content-switch {
-      margin: auto;
-      width: 75%;
+      .profile-avatars-connection {
+        margin: 50px auto 10px auto;
+        text-align: center;
+      }
 
-      .text-radios {
-        padding: 5px 0 35px 0;
+      .title {
+        margin-bottom: 10px;
+      }
 
-        .chip {
-          width: 49%;
+      .common-content-switch {
+        margin: auto;
+        width: 75%;
+
+        .text-radios {
+          padding: 5px 0 35px 0;
+
+          .chip {
+            width: 49%;
+          }
         }
       }
-    }
-    .content-list {
-      .card {
-        display: inline-block;
-        margin: 5px 1% 5px 1%;
-        width: 48%;
+      .content-list {
+        .card {
+          display: inline-block;
+          margin: 5px 1% 5px 1%;
+          width: 48%;
+        }
       }
-    }
-    .content-carousel .swiper-slide {
-      width: 275px;
-    }
-    .contents-empty {
-      text-align: center;
-      margin-top: 30%;
+      .content-carousel .swiper-slide {
+        width: 275px;
+      }
+      .contents-empty {
+        text-align: center;
+        margin-top: 30%;
+      }
     }
   }
 }
