--- a/src/scss/pages/questions.scss
+++ b/src/scss/pages/questions.scss
@@ -1,151 +1,162 @@
 @import '../_partials/colors';
 
-body #root .App .view .page.questions-page {
-  #page-content {
-    .question-list {
-      margin-top: 40px;
+body #root .App{
 
-      .question {
-        margin-bottom: 15px;
+  #questions-view-main {
+    overflow-y:hidden;
+  }
 
-        .question-title {
-          font-weight: bold;
-          margin-bottom: 10px;
-          width: 85%;
-        }
-        a {
-          color: #fff;
+  .view .page.questions-page {
+    #page-content {
+      width:100% !important;
+      .question-list {
+        width:85%;
+        margin-left:7.5%;
+        margin-top: 20px;
+        padding-bottom:100px;
 
-          .edit-question-button {
-            background-color: $deep-purple;
-            border-radius: 50%;
-            -moz-border-radius: 50%;
-            -webkit-border-radius: 50%;
-            display: block;
-            float: right;
-            font-size: 10px;
-            height: 22px;
-            line-height: 24px;
-            text-align: center;
-            width: 22px;
+        .question {
+          margin-bottom: 15px;
+
+          .question-title {
+            font-weight: bold;
+            margin-bottom: 10px;
+            width: 85%;
           }
-        }
-        .answer-answered, .answer-not-answered {
-          .answer-answered-picture, .answer-not-answered-picture {
-            background-color: #fff;
-            border-radius: 50%;
-            -moz-border-radius: 50%;
-            -webkit-border-radius: 50%;
-            display: inline-block;
-            height: 22px;
-            margin: 5px 10px 0 0;
-            text-align: center;
-            width: 22px;
+          a {
+            color: #fff;
 
-            img {
+            .edit-question-button {
+              background-color: $deep-purple;
               border-radius: 50%;
               -moz-border-radius: 50%;
               -webkit-border-radius: 50%;
-              height: 20px;
-              margin-top: 1px;
-              width: 20px;
+              display: block;
+              float: right;
+              font-size: 10px;
+              height: 22px;
+              line-height: 24px;
+              text-align: center;
+              width: 22px;
             }
           }
-
-          .answer-not-answered-picture {
-            opacity: 0.5;
-
-            img {
-              opacity: 0.5;
-            }
-          }
-
-          .answer-answered-text, .answer-not-answered-text {
-            display: inline-block;
-            margin-top: -8px;
-            vertical-align: text-top;
-            width: 82%;
-          }
-        }
-
-        .question-stats {
-          margin-top: 10px;
-          text-align: center;
-
-          .question-stats-graph-title {
-            color: $pink;
-            font-weight: bold;
-            margin-bottom: 15px;
-          }
-          .community-question-stats {
-            .female-answer-chart-container, .male-answer-chart-container {
+          .answer-answered, .answer-not-answered {
+            .answer-answered-picture, .answer-not-answered-picture {
+              background-color: #fff;
+              border-radius: 50%;
+              -moz-border-radius: 50%;
+              -webkit-border-radius: 50%;
               display: inline-block;
-              height: 100px;
-              width: 100px;
+              height: 22px;
+              margin: 5px 10px 0 0;
+              text-align: center;
+              width: 22px;
 
-              canvas {
+              img {
+                border-radius: 50%;
+                -moz-border-radius: 50%;
+                -webkit-border-radius: 50%;
+                height: 20px;
+                margin-top: 1px;
+                width: 20px;
+              }
+            }
+
+            .answer-not-answered-picture {
+              opacity: 0.5;
+
+              img {
+                opacity: 0.5;
+              }
+            }
+
+            .answer-answered-text, .answer-not-answered-text {
+              display: inline-block;
+              margin-top: -8px;
+              vertical-align: text-top;
+              width: 82%;
+            }
+          }
+
+          .question-stats {
+            margin-top: 10px;
+            text-align: center;
+
+            .question-stats-graph-title {
+              color: $pink;
+              font-weight: bold;
+              margin-bottom: 15px;
+            }
+            .community-question-stats {
+              .female-answer-chart-container, .male-answer-chart-container {
+                display: inline-block;
                 height: 100px;
                 width: 100px;
-              }
-              .genre-icon {
-                color: $deep-purple;
-                margin-top: -70px;
-              }
-              .icon-female {
-                font-size: 1.1em;
-                margin-top: -70px;
-              }
-              .genre-text {
-                font-size: 0.8em;
-              }
-            }
-            .female-answer-chart-container {
-              margin-right: 5%;
-            }
-            .male-answer-chart-container {
 
+                canvas {
+                  height: 100px;
+                  width: 100px;
+                }
+                .genre-icon {
+                  color: $deep-purple;
+                  margin-top: -70px;
+                }
+                .icon-female {
+                  font-size: 1.1em;
+                  margin-top: -70px;
+                }
+                .genre-text {
+                  font-size: 0.8em;
+                }
+              }
+              .female-answer-chart-container {
+                margin-right: 5%;
+              }
+              .male-answer-chart-container {
+
+              }
+            }
+            .answers-colors {
+              text-align: left;
+
+              .answer-color {
+                .icon-circle {
+                  font-size: 9px;
+                  line-height: 16px;
+                }
+                .answer {
+                  display: inline-block;
+                  margin-left: 5px;
+                  overflow: hidden;
+                  max-width: 90%;
+                  text-overflow: ellipsis;
+                  vertical-align: bottom;
+                  white-space: nowrap;
+                }
+              }
+
+              hr {
+                background-color: $light-gray;
+                border: none;
+                color: $light-gray;
+                height: 1px;
+                width: 10%;
+                max-width: 10%;
+                margin: 20px 0 15px 0;
+              }
             }
           }
-          .answers-colors {
-            text-align: left;
 
-            .answer-color {
-              .icon-circle {
-                font-size: 9px;
-                line-height: 16px;
-              }
-              .answer {
-                display: inline-block;
-                margin-left: 5px;
-                overflow: hidden;
-                max-width: 90%;
-                text-overflow: ellipsis;
-                vertical-align: bottom;
-                white-space: nowrap;
-              }
-            }
-
-            hr {
-              background-color: $light-gray;
-              border: none;
-              color: $light-gray;
-              height: 1px;
-              width: 10%;
-              max-width: 10%;
-              margin: 20px 0 15px 0;
-            }
+          hr {
+            background-color: $deep-purple;
+            border: none;
+            height: 1px;
+            margin-top: 15px;
           }
-        }
-
-        hr {
-          background-color: $deep-purple;
-          border: none;
-          height: 1px;
-          margin-top: 15px;
         }
       }
     }
-  }
+}
 }
 
 body #root .App .view .page.threads-page .answer-questions-link-container {
