QS-1352: Fix scroll not rendering when data already exists onMount

--- a/src/scss/pages/notifications.scss
+++ b/src/scss/pages/notifications.scss
@@ -1,4 +1,7 @@
 @import "../_partials/colors";
+body #root .App .views #chat-threads-view-main {
+  overflow-y: hidden;
+}
 body #root .App .views .view.notifications-view {
   overflow-y: hidden;
 }
