QS-1378: Use button for upload from device

--- a/src/scss/pages/gallery.scss
+++ b/src/scss/pages/gallery.scss
@@ -134,10 +134,10 @@ body #root .App .views .view .page.gallery-page {
   }
   .upload-wrapper {
     cursor: pointer;
-    font-size: 1.5em;
     margin-top: 20px;
+    text-align: center;
     .icon-uploadthin {
-      font-size: 0.6em;
+      font-size: 0.8em;
     }
   }
 }
