--- a/src/scss/pages/other-user.scss
+++ b/src/scss/pages/other-user.scss
@@ -59,6 +59,9 @@ body #root .App .views .view .page.other-user-page {
           margin-right: 5px;
         }
       }
+      .icon-fa-plus:before {
+        font-size: 19px;
+      }
       .user-description {
         margin-bottom: 5px;
 
