--- a/src/scss/pages/other-questions.scss
+++ b/src/scss/pages/other-questions.scss
@@ -37,9 +37,14 @@ body #root .App .view .page.other-questions-page  {
             float: right;
             font-size: 10px;
             height: 22px;
-            line-height: 24px;
+            line-height: 22px;
             text-align: center;
             width: 22px;
+
+            .icon-edit:before {
+              font-size: 10px;
+              line-height: 22px;
+            }
           }
         }
         .answer-answered, .answer-not-answered {
