--- a/src/scss/pages/questions.scss
+++ b/src/scss/pages/questions.scss
@@ -35,9 +35,14 @@ body #root .App{
               float: right;
               font-size: 10px;
               height: 22px;
-              line-height: 24px;
+              line-height: 22px;
               text-align: center;
               width: 22px;
+
+              .icon-edit:before {
+                font-size: 10px;
+                line-height: 22px;
+              }
             }
           }
           .answer-answered, .answer-not-answered {
