QS-1400: Try to show answer importance title in one line

--- a/src/scss/pages/answer-question.scss
+++ b/src/scss/pages/answer-question.scss
@@ -145,6 +145,13 @@ body #root .App .view .page {
             position: absolute;
             width: 42px;
           }
+
+          .accepted-answers-importance {
+            .text-radios .text-radios-title {
+              width: 115%;
+              margin-left: -7.5%;
+            }
+          }
         }
       }
 
