QS-1402: Remove close link in popups

--- a/src/scss/_partials/_popup.scss
+++ b/src/scss/_partials/_popup.scss
@@ -76,6 +76,9 @@
 		margin-top: 0;
 		z-index: 1111111;
 
+		.content-block {
+			margin-top: 50px;
+		}
 		.textarea-title {
 			color: #fff;
 			margin: auto;
