QS-1415: Show loading circles while logging by facebook

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -114,6 +114,10 @@ body #root .App .views .view.home-view {
     }
   }
 
+  .icon-spinner {
+    font-size: 30px;
+  }
+
   .nekuno-logo-wrapper {
     height: 120px;
     position: absolute;
