QS-1380: Disable content type filtering while waiting for a request

--- a/src/scss/_partials/_filter-content-buttons.scss
+++ b/src/scss/_partials/_filter-content-buttons.scss
@@ -48,6 +48,12 @@
 					}
 				}
 			}
+
+			.spinner-wrapper {
+				display: inline-block;
+				margin: auto;
+				font-size: 0.8em;
+			}
 		}
 	}
 }
