--- a/src/scss/_partials/_filter-content-buttons.scss
+++ b/src/scss/_partials/_filter-content-buttons.scss
@@ -45,6 +45,12 @@
 
 					.icon {
 						padding-top: 4.5px;
+
+						&.icon-spinner {
+							line-height: 20px;
+							height: 26px;
+							margin-top: 2px;
+						}
 					}
 				}
 			}
