--- a/src/scss/_partials/_filter-content-buttons.scss
+++ b/src/scss/_partials/_filter-content-buttons.scss
@@ -35,6 +35,10 @@
 					font-size: 0.8em;
 					font-weight: bold;
 					margin-top: 10px;
+
+					&.spinner-text {
+						margin-top: 4px;
+					}
 				}
 
 				&.active {
@@ -47,9 +51,10 @@
 						padding-top: 4.5px;
 
 						&.icon-spinner {
-							line-height: 20px;
-							height: 26px;
-							margin-top: 2px;
+							height: 30px;
+							width: 30px;
+							font-size: 1.7em;
+							margin-top: 1px;
 						}
 					}
 				}
