QS-1415: Show spinner inside Facebook Button while logging

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -115,7 +115,9 @@ body #root .App .views .view.home-view {
   }
 
   .icon-spinner {
-    font-size: 30px;
+    font-size: 40px;
+    margin-top: 9px;
+    margin-left: -42px;
   }
 
   .nekuno-logo-wrapper {
