--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -41,6 +41,7 @@
 @import '_partials/thread-toolbar';
 @import '_partials/filter-content-buttons';
 @import '_partials/share-profile-banner';
+@import '_partials/button-floating';
 
 * {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
