--- a/src/scss/pages/other-user.scss
+++ b/src/scss/pages/other-user.scss
@@ -20,12 +20,21 @@ body #root .App .views .view .page.other-user-page {
         width: 100%;
         margin-top: 288px;
         .swiper-pagination-bullet {
-          background: #fff;
+          background-color: white;
+          height: 6px;
           margin: 0 5px;
-          opacity: 0.8;
+          opacity: 0.6;
+          width: 6px;
 
           &.swiper-pagination-bullet-active {
-            background-color: $light-green;
+            background-color: white;
+            height: 6px;
+            margin: 0 5px;
+            opacity: 0.6;
+            width: 30px;
+            border-radius: 5px;
+            -webkit-border-radius: 5px;
+            -moz-border-radius: 5px;
           }
         }
       }
