--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -40,11 +40,11 @@ $nekuno-logo-font: 'klinic_slabmedium';
 
 @font-face {
 	font-family: 'Nekuno Icons';
-	src:  url('fonts/icomoon.eot?u3uaa4');
-	src:  url('fonts/icomoon.eot?u3uaa4#iefix') format('embedded-opentype'),
-	url('fonts/icomoon.ttf?u3uaa4') format('truetype'),
-	url('fonts/icomoon.woff?u3uaa4') format('woff'),
-	url('fonts/icomoon.svg?u3uaa4#icomoon') format('svg');
+	src:  url('fonts/icomoon.eot?hd8e4e');
+	src:  url('fonts/icomoon.eot?hd8e4e#iefix') format('embedded-opentype'),
+	url('fonts/icomoon.ttf?hd8e4e') format('truetype'),
+	url('fonts/icomoon.woff?hd8e4e') format('woff'),
+	url('fonts/icomoon.svg?hd8e4e#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -68,6 +68,12 @@ $nekuno-logo-font: 'klinic_slabmedium';
 	opacity: 0.5;
 }
 
+.icon-cool:before {
+	content: "\e9eb";
+}
+.icon-hipster:before {
+	content: "\e9f9";
+}
 .icon-arrow-left:before {
 	content: "\f060";
 }
