QS-1421: Center badge popup input text

--- a/src/scss/_partials/_popup.scss
+++ b/src/scss/_partials/_popup.scss
@@ -78,6 +78,11 @@
 
 		.content-block {
 			margin-top: 50px;
+			width: 95%;
+
+			input {
+				text-align: center;
+			}
 		}
 		.textarea-title {
 			color: #fff;
