QS-1426: Fix plus icon in add filter

--- a/src/scss/pages/create-thread.scss
+++ b/src/scss/pages/create-thread.scss
@@ -196,6 +196,7 @@ body #root .App .views .view .page.create-thread-page  {
           font-size: 11px;
           position: absolute;
           margin-top: -10px;
+          z-index: 1;
         }
         .icon-circle.active {
           color: $green-alert;
