QS-1434: Use react-emojione for showing messages

--- a/src/scss/_partials/_notifications.scss
+++ b/src/scss/_partials/_notifications.scss
@@ -61,6 +61,10 @@
 				overflow: hidden;
 				text-overflow: ellipsis;
 			}
+			
+			> span {
+				text-align: left;
+			}
 		}
 		.notification-time {
 			color: #000;
