QS-1379: Show loading gif while loading each own photo in gallery page

--- a/src/scss/pages/gallery.scss
+++ b/src/scss/pages/gallery.scss
@@ -21,6 +21,9 @@ body #root .App .views .view .page.gallery-page {
         margin-left: -53px;
         width: 200px;
 
+        .loading-gif {
+          margin: auto;
+        }
         img {
           border-radius: 2px;
           -moz-border-radius: 2px;
