QS-1416: Fix repeated API calls and small miscelanea

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -225,7 +225,7 @@ body {
 						background: url('img/loading.gif') no-repeat;
 						background-size: 100px 100px;
 						height: 100px;
-						margin: -25px auto auto auto;
+						margin: auto;
 						width: 100px;
 					}
 
