QS-1443: Fix social wheel icons behaviour and add empty message

--- a/src/scss/_partials/_social-wheels.scss
+++ b/src/scss/_partials/_social-wheels.scss
@@ -98,5 +98,9 @@ body #root .App .view {
       height: 30px;
       width: 30px;
     }
+
+    .empty-message {
+      margin-top: 30px;
+    }
   }
 }
