Use squares in others answers checkboxes

--- a/src/scss/pages/answer-question.scss
+++ b/src/scss/pages/answer-question.scss
@@ -141,6 +141,9 @@ body #root .App .view .page {
                     z-index: 100;
                   }
                 }
+                .icon-form-checkbox {
+                  border-radius: 0;
+                }
               }
             }
           }
