--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -42,6 +42,7 @@
 @import '_partials/filter-content-buttons';
 @import '_partials/share-profile-banner';
 @import '_partials/button-floating';
+@import '_partials/card-user-top-links';
 
 * {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
