--- a/src/scss/_partials/_card-user-top-links.scss
+++ b/src/scss/_partials/_card-user-top-links.scss
@@ -1,6 +1,7 @@
 .card-user-top-links {
   margin-top: -20px;
   margin-bottom: -25px;
+  height: 50px;
   .top-link-wrapper {
     background-color: #fff;
     border-radius: 50%;
@@ -9,10 +10,9 @@
     display: inline-block;
     height: 41px;
     position: relative;
-    text-align: center;
     width: 41px;
     z-index: 11;
-    .top-link-centered-wrapper {
+    .top-link {
       border-radius: 50%;
       -moz-border-radius: 50%;
       -webkit-border-radius: 50%;
@@ -20,34 +20,84 @@
       position: relative;
       height: 35px;
       overflow: hidden;
-      .top-link {
-        margin-left: -32px;
-        position: absolute;
-        width: 100px;
-        height: 35px;
-        .opacity-wrapper {
-          opacity: 0.6;
-        }
-        img {
-          min-height: 56px;
-          margin: -10px auto;
-          width: 52%;
-        }
+      img {
+        height: 100%;
+        width: 100%;
       }
+    }
+    .shared-link-wrapper {
+      background-color: #000;
+      border-radius: 50%;
+      -moz-border-radius: 50%;
+      -webkit-border-radius: 50%;
+      height: 35px;
+      width: 35px;
+      opacity: 0.7;
+      position: absolute;
+      top: 3px;
+      left: 3px;
       .shared-links {
-        margin-top: -35px;
-        font-size: 1.2em;
-        color: $regular-gray;
+        font-size: 1.1em;
+        color: #fff;
+        height: 35px;
+        line-height: 35px;
         font-weight: bold;
-        position: relative;
       }
     }
   }
+}
 
-  @media only screen and (min-width: 319px) {
+@media only screen and (min-width: 330px) {
+  .card-user-top-links {
+    margin-top: -25px;
+    margin-bottom: -20px;
+    height: 60px;
     .top-link-wrapper {
-      margin-right: 5px;
-      margin-left: 5px;
+      height: 51px;
+      width: 51px;
+      .top-link {
+        margin: 3px;
+        height: 45px;
+      }
+      .shared-link-wrapper {
+        height: 45px;
+        width: 45px;
+        top: 3px;
+        left: 3px;
+        .shared-links {
+          font-size: 1.3em;
+          height: 45px;
+          line-height: 45px;
+        }
+      }
+    }
+  }
+}
+
+
+@media only screen and (min-width: 410px) {
+  .card-user-top-links {
+    margin-top: -30px;
+    margin-bottom: -20px;
+    height: 70px;
+    .top-link-wrapper {
+      height: 61px;
+      width: 61px;
+      .top-link {
+        margin: 3px;
+        height: 55px;
+      }
+      .shared-link-wrapper {
+        height: 55px;
+        width: 55px;
+        top: 3px;
+        left: 3px;
+        .shared-links {
+          font-size: 1.5em;
+          height: 55px;
+          line-height: 55px;
+        }
+      }
     }
   }
 }
