QS-1478: Add objectives field as a required profile option

--- a/src/scss/pages/answer-question.scss
+++ b/src/scss/pages/answer-question.scss
@@ -15,6 +15,9 @@ body #root .App .view .page {
           font-size: 1.2em;
         }
       }
+      .objectives-field .text-checkboxes .chip {
+        margin: 5px;
+      }
       .answer-question-form {
         form {
           .disabled {
