--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -40,11 +40,11 @@ $nekuno-logo-font: 'klinic_slabmedium';
 
 @font-face {
 	font-family: 'Nekuno Icons';
-	src:  url('fonts/icomoon.eot?hd8e4e');
-	src:  url('fonts/icomoon.eot?hd8e4e#iefix') format('embedded-opentype'),
-	url('fonts/icomoon.ttf?hd8e4e') format('truetype'),
-	url('fonts/icomoon.woff?hd8e4e') format('woff'),
-	url('fonts/icomoon.svg?hd8e4e#icomoon') format('svg');
+	src:  url('fonts/icomoon.eot?r9ru26');
+	src:  url('fonts/icomoon.eot?r9ru26#iefix') format('embedded-opentype'),
+	url('fonts/icomoon.ttf?r9ru26') format('truetype'),
+	url('fonts/icomoon.woff?r9ru26') format('woff'),
+	url('fonts/icomoon.svg?r9ru26#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -68,6 +68,21 @@ $nekuno-logo-font: 'klinic_slabmedium';
 	opacity: 0.5;
 }
 
+.icon-gamepad:before {
+	content: "\e932";
+}
+.icon-cubes:before {
+	content: "\e933";
+}
+.icon-compass:before {
+	content: "\e934";
+}
+.icon-lightbulb:before {
+	content: "\e935";
+}
+.icon-comments:before {
+	content: "\e936";
+}
 .icon-cool:before {
 	content: "\e9eb";
 }
