QS-1478: Less button margin in answer objectives page

--- a/src/scss/pages/answer-question.scss
+++ b/src/scss/pages/answer-question.scss
@@ -39,7 +39,7 @@ body #root .App .view .page {
 
       .button {
         width: 85%;
-        margin: auto;
+        margin: -30px auto 0;
         display: block;
       }
     }
