--- a/src/scss/pages/other-user.scss
+++ b/src/scss/pages/other-user.scss
@@ -209,6 +209,35 @@ body #root .App .views .view .page.other-user-page {
           }
         }
       }
+
+      .common-groups {
+        clear: both;
+        text-align: left;
+        margin-left: 10%;
+        position: relative;
+        top: 10px;
+        margin-bottom: 10px;
+
+        .common-groups-title {
+          display: inline-block;
+          margin-right: 10px;
+        }
+        .small-icon-wrapper {
+          background: #fff;
+          margin: 5px 5px;
+          height: 30px;
+          width: 30px;
+          vertical-align: middle;
+          img {
+            border-radius: 50%;
+            -moz-border-radius: 50%;
+            -webkit-border-radius: 50%;
+            margin-top: 1px;
+            height: 28px;
+            width: 28px;
+          }
+        }
+      }
     }
 
     .like-button, .block-button {
