1490: Limit options in orientation popup and add text

--- a/src/scss/_partials/_popup.scss
+++ b/src/scss/_partials/_popup.scss
@@ -29,6 +29,12 @@
 			font-size: 1.785714286em;
 			text-align: center;
 		}
+		.popup-orientation-required-clarification {
+			color: #fff;
+			margin-bottom: 10px;
+			font-weight: bold;
+			text-align: center;
+		}
 		.popup-register-finished-text {
 			margin-bottom: 40px;
 			text-align: center;
