QS-1488: Add message to questions stats

--- a/src/scss/pages/question-stats.scss
+++ b/src/scss/pages/question-stats.scss
@@ -21,9 +21,14 @@ body #root .App .views .view .page.question-stats-page {
       .question-stats-graph-title {
         color: $pink;
         font-weight: bold;
-        margin-bottom: 30px;
+        margin-bottom: 10px;
       }
       .community-question-stats {
+        .question-stats-type {
+          color: $pink;
+          font-weight: bold;
+          margin-bottom: 40px;
+        }
         .first-answer-chart-container, .second-answer-chart-container {
           display: inline-block;
           height: 150px;
