QS-1065: Add instagram network and refactor card icons

--- a/src/scss/_partials/_base.scss
+++ b/src/scss/_partials/_base.scss
@@ -41,6 +41,10 @@
     .icon-spotify {
       background-color: $spotify-green;
     }
+
+    .icon-instagram {
+      background-color: $instagram-blue;
+    }
   }
 }
 
