--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -67,6 +67,9 @@
 				.icon-facebook {
 					font-size: 2.5em !important;
 				}
+				.icon-instagram {
+					font-size: 2.5em !important;
+				}
 			}
 
 			.link-icon-wrapper {
@@ -87,6 +90,10 @@
 
 			.facebook-icon-wrapper {
 				background-color: $facebook-blue !important;
+			}
+
+			.instagram-icon-wrapper {
+				background-color: $instagram-blue !important;
 			}
 		}
 	}
