--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -22,6 +22,7 @@ $facebook-blue: #3b5998;
 $facebook-blue-light: rgba(139,157,195, 0.5);
 $twitter-blue: #55acee;
 $spotify-green: #82b919;
+$instagram-blue: #405de6;
 $google-red: #d34836;
 $youtube-red: #cd201f;
 $material-red: #F44336;
