--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -188,6 +188,8 @@ $nekuno-logo-font: 'klinic_slabmedium';
 }
 .icon-instagram:before {
 	content: "\e90b";
+	margin-left: 1px;
+	margin-right: -1px;
 }
 .icon-left-arrow:before {
 	content: "\e90c";
