--- a/src/scss/_partials/_social-wheels.scss
+++ b/src/scss/_partials/_social-wheels.scss
@@ -92,6 +92,13 @@ body #root .App .view {
     .text-spotify {
       background-color: $spotify-green;
     }
+    .wheel-instagram {
+      stroke: $instagram-blue;
+    }
+    .text-instagram {
+      background-color: $instagram-blue;
+    }
+
 
     .big-icon-wrapper.icon-wrapper {
       font-size: 2.1em;
