QS-1496: Add tumblr network

--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -70,6 +70,9 @@
 				.icon-instagram {
 					font-size: 2.5em !important;
 				}
+				.icon-tumblr {
+					font-size: 2.5em !important;
+				}
 			}
 
 			.link-icon-wrapper {
@@ -94,6 +97,10 @@
 
 			.instagram-icon-wrapper {
 				background-color: $instagram-blue !important;
+			}
+
+			.tumblr-icon-wrapper {
+				background-color: $tumblr-blue !important;
 			}
 		}
 	}
