--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -25,6 +25,7 @@ $spotify-green: #82b919;
 $instagram-blue: #405de6;
 $google-red: #d34836;
 $youtube-red: #cd201f;
+$tumblr-blue: #35465c;
 $material-red: #F44336;
 $material-pink: #E91E63;
 $material-purple: #9C27B0;
