--- a/src/scss/_partials/_social-wheels.scss
+++ b/src/scss/_partials/_social-wheels.scss
@@ -98,6 +98,12 @@ body #root .App .view {
     .text-instagram {
       background-color: $instagram-blue;
     }
+    .wheel-tumblr {
+      stroke: $tumblr-blue;
+    }
+    .text-tumblr {
+      background-color: $tumblr-blue;
+    }
 
 
     .big-icon-wrapper.icon-wrapper {
