--- a/src/scss/_partials/_base.scss
+++ b/src/scss/_partials/_base.scss
@@ -45,6 +45,10 @@
     .icon-instagram {
       background-color: $instagram-blue;
     }
+
+    .icon-tumblr {
+      background-color: $tumblr-blue;
+    }
   }
 }
 
