--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -40,11 +40,11 @@ $nekuno-logo-font: 'klinic_slabmedium';
 
 @font-face {
 	font-family: 'Nekuno Icons';
-	src:  url('fonts/icomoon.eot?r9ru26');
-	src:  url('fonts/icomoon.eot?r9ru26#iefix') format('embedded-opentype'),
-	url('fonts/icomoon.ttf?r9ru26') format('truetype'),
-	url('fonts/icomoon.woff?r9ru26') format('woff'),
-	url('fonts/icomoon.svg?r9ru26#icomoon') format('svg');
+	src:  url('fonts/icomoon.eot?r024dh');
+	src:  url('fonts/icomoon.eot?r024dh#iefix') format('embedded-opentype'),
+	url('fonts/icomoon.ttf?r024dh') format('truetype'),
+	url('fonts/icomoon.woff?r024dh') format('woff'),
+	url('fonts/icomoon.svg?r024dh#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -68,6 +68,9 @@ $nekuno-logo-font: 'klinic_slabmedium';
 	opacity: 0.5;
 }
 
+.icon-tumblr:before {
+	content: "\eab9";
+}
 .icon-gamepad:before {
 	content: "\e932";
 }
