--- a/src/scss/_partials/_text-radios.scss
+++ b/src/scss/_partials/_text-radios.scss
@@ -30,6 +30,16 @@
       text-align: center;
     }
   }
+  
+  select {
+    background: $dark-purple;
+    border: 1px solid;
+    border-radius: 16px;
+    -moz-border-radius: 16px;
+    -webkit-border-radius: 16px;
+    cursor: pointer;
+    text-align-last: center;
+  }
 }
 
 .text-radios-disabled {
