QS-1502: Steam integration

--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -68,7 +68,7 @@ $nekuno-logo-font: 'klinic_slabmedium';
 	opacity: 0.5;
 }
 
-.icon-tumblr:before {
+.icon-tumblr:before, .icon-steam:before {
 	content: "\eab9";
 }
 .icon-gamepad:before {
