QS-1502: Add steam icon and styles

--- a/src/scss/_partials/_base.scss
+++ b/src/scss/_partials/_base.scss
@@ -53,6 +53,10 @@
     .icon-linkedin {
       background-color: $linkedin-blue;
     }
+
+    .icon-steam {
+      background-color: $steam-black;
+    }
   }
 }
 
