--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -27,6 +27,7 @@ $google-red: #d34836;
 $youtube-red: #cd201f;
 $tumblr-blue: #35465c;
 $linkedin-blue: #0077b5;
+$steam-black: #000000;
 $material-red: #F44336;
 $material-pink: #E91E63;
 $material-purple: #9C27B0;
