--- a/src/scss/_partials/_social-wheels.scss
+++ b/src/scss/_partials/_social-wheels.scss
@@ -110,6 +110,12 @@ body #root .App .view {
     .text-linkedin {
       background-color: $linkedin-blue;
     }
+    .wheel-steam {
+      stroke: $steam-black;
+    }
+    .text-steam {
+      background-color: $steam-black;
+    }
 
 
 
