QS-1502: Add game type to interests

--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -58,6 +58,9 @@
 				.icon-audio {
 					font-size: 1.3em !important;
 				}
+				.icon-gamepad {
+					font-size: 1.5em !important;
+				}
 				.icon-twitter {
 					font-size: 2.2em !important;
 				}
