--- a/src/scss/_partials/_input.scss
+++ b/src/scss/_partials/_input.scss
@@ -1,8 +1,49 @@
-.list-block {	
-	input[type=time], input[type=number], input[type=search], input[type=text], input[type=password], input[type=email], input[type=tel], input[type=url], input[type=date], input[type=datetime-local], select, textarea {
+.list-block {
+	ul li::after {
+		content: none;
+	}
+	input[type=time], input[type=number], input[type=search], input[type=text], input[type=password], input[type=email], input[type=tel], input[type=url], input[type=date], input[type=datetime-local], select {
+		color: #fff;
+		font-size: 1em;
+		margin-bottom: 10px;
+		margin-top: 15px;
+		display: block;
+		border: none;
+		padding: 10px 0;
+		transition: all 0.3s cubic-bezier(.64, .09, .08, 1);
+		background: linear-gradient(to bottom, rgba(255,255,255,0) 96%, $deep-purple 4%);
+		background-position: -500px 0;
+		background-size: 100%;
+		background-repeat: no-repeat;
+		&:focus, &:valid {
+			box-shadow: none;
+			outline: none;
+			background-position: 0 0;
+			&::-webkit-input-placeholder {
+				font-size: 0.8em;
+				transform: translateY(-20px);
+				-webkit-transform: translateY(-20px);
+				visibility: visible !important;
+			}
+		}
+	}
+
+	textarea {
 		color: #fff;
 		font-size: 1em;
 		margin-bottom: 10px;
 		margin-top: 5px;
+
+		&:focus, &:valid {
+			box-shadow: none;
+			outline: none;
+			background-position: 0 0;
+			&::-webkit-input-placeholder {
+				font-size: 0.8em;
+				transform: translateY(-10px);
+				-webkit-transform: translateY(-10px);
+				visibility: visible !important;
+			}
+		}
 	}
 }
